--- a/portfolio/_posts/2015-10-7-JSKoans.markdown
+++ b/portfolio/_posts/2015-10-7-JSKoans.markdown
@@ -2,8 +2,9 @@
 layout: post
 category: portfolio
 title: JS Koans
-img: "/images/jskoans.jpg"
-excerpt: "These koans were quite the challenge and yes, I do feel a tad bit more enlighted upon their completion."
+img: "port-img/jskoans.jpg"
+homeimage: "portfolio/port-img/jskoans.jpg"
+excerpt: "These koans were quite the challenge since it was the first ever experiencing a testing environment and yes, I do feel a tad bit more enlightened upon their completion."
 date: 2014-11-15
 ---
 
