--- a/portfolio/_posts/2015-10-7-JSKoans.markdown
+++ b/portfolio/_posts/2015-10-7-JSKoans.markdown
@@ -1,8 +1,9 @@
 ---
 layout: post
 category: portfolio
-title: JS Koans
+title: Javascript Koans
 img: "port-img/jskoans.jpg"
+tools: Javascript
 homeimage: "portfolio/port-img/jskoans.jpg"
 excerpt: "These koans were quite the challenge since it was the first ever experiencing a testing environment and yes, I do feel a tad bit more enlightened upon their completion."
 date: 2014-11-15
