--- a/resources/_posts/2015-03-04-MVCinASP.markdown
+++ b/resources/_posts/2015-03-04-MVCinASP.markdown
@@ -22,7 +22,7 @@ While I was going through the tutorial, I learned a lot more about post and get 
 ##Not For
 - This is for Visual Studio Express 2013 for Web or Visual Studio 2013, which is the latest at the time of this writing.
 - This uses LocalDB which is installed by default in Visual Studio. This is not for learning about other database systems.
-- This does not go over the particulars of the MVC pattern. It is assumed that you are already familiar with it already.
+- This does not go over the particulars of the MVC pattern. It is assumed that you are familiar with it already.
 
 ##Links
 - Check out the [Online Tutorial](http://www.asp.net/mvc/overview/getting-started/introduction/getting-started)
